@@ -4,6 +4,9 @@ Changelog
 1.7.6 - Unreleased
 ------------------
 
+- Removes Follow functionality (JS part).
+  [Cesar Gonzalez]
+
 - Removes Follow functionality.
   [Jose Dinuncio]
 
